--- a/SRSDriver/Resources/Storyboards/Packages.storyboard
+++ b/SRSDriver/Resources/Storyboards/Packages.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,16 +10,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Packages-->
+        <!--Packages View Controller-->
         <scene sceneID="bAA-FQ-5Nx">
             <objects>
                 <viewController storyboardIdentifier="PackagesViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="buw-xu-1C5" customClass="PackagesViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vSx-w1-EZb">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KzJ-XD-Hkg">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PackageTableViewCell" rowHeight="100" id="rpc-xW-eWc" customClass="PackageTableViewCell" customModule="DMSDriver" customModuleProvider="target">
@@ -159,51 +159,31 @@
                                     <outlet property="delegate" destination="buw-xu-1C5" id="XUF-Dr-mst"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No package" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vi8-Oc-qEE">
+                                <rect key="frame" x="142" y="333.5" width="91.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.28235294117647058" green="0.36470588235294116" blue="0.4392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="KzJ-XD-Hkg" firstAttribute="leading" secondItem="d0E-te-9nt" secondAttribute="leading" id="BF6-GD-1hb"/>
+                            <constraint firstItem="Vi8-Oc-qEE" firstAttribute="centerY" secondItem="KzJ-XD-Hkg" secondAttribute="centerY" id="ChU-Dx-pfa"/>
                             <constraint firstItem="d0E-te-9nt" firstAttribute="trailing" secondItem="KzJ-XD-Hkg" secondAttribute="trailing" id="I1e-Kb-dYI"/>
+                            <constraint firstItem="Vi8-Oc-qEE" firstAttribute="centerX" secondItem="KzJ-XD-Hkg" secondAttribute="centerX" id="MPR-JY-1UH"/>
                             <constraint firstItem="KzJ-XD-Hkg" firstAttribute="bottom" secondItem="d0E-te-9nt" secondAttribute="bottom" id="Ryo-zk-4Xe"/>
                             <constraint firstItem="KzJ-XD-Hkg" firstAttribute="top" secondItem="d0E-te-9nt" secondAttribute="top" id="SVe-Qm-4zd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="d0E-te-9nt"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Packages" id="fwI-gS-VBb"/>
                     <connections>
                         <outlet property="tableView" destination="KzJ-XD-Hkg" id="cBL-J9-mc0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XLz-96-Buc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="514" y="1735"/>
-        </scene>
-        <!--Packages-->
-        <scene sceneID="Ba7-Gr-XNK">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7bD-bN-flU" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ib8-ml-YEB" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Packages" image="truck-fast" id="hGB-vF-F22">
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="packages"/>
-                        </userDefinedRuntimeAttributes>
-                    </tabBarItem>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="pi9-9w-pfW">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.94509803920000002" green="0.54117647059999996" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="buw-xu-1C5" kind="relationship" relationship="rootViewController" id="VvK-pP-VsF"/>
-                    </connections>
-                </navigationController>
-            </objects>
-            <point key="canvasLocation" x="596" y="933"/>
+            <point key="canvasLocation" x="396" y="1372"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="truck-fast" width="32" height="32"/>
-    </resources>
 </document>
