--- a/SRSDriver/Resources/Storyboards/Order.storyboard
+++ b/SRSDriver/Resources/Storyboards/Order.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -414,7 +414,7 @@
                                                     <rect key="frame" x="15" y="0.0" width="345" height="92"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i0n-cF-5jV">
-                                                            <rect key="frame" x="15" y="5" width="26" height="82"/>
+                                                            <rect key="frame" x="15" y="5" width="26" height="16.5"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="12"/>
                                                             <color key="textColor" red="0.49803921569999998" green="0.49803921569999998" blue="0.49803921569999998" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -439,12 +439,11 @@
                                                         <constraint firstItem="i0n-cF-5jV" firstAttribute="leading" secondItem="Sfh-Uk-kXF" secondAttribute="leading" constant="15" id="2tc-RF-aay"/>
                                                         <constraint firstItem="Gjx-GB-EvR" firstAttribute="width" secondItem="Gjx-GB-EvR" secondAttribute="height" multiplier="1:1" id="4KY-mb-gPK"/>
                                                         <constraint firstItem="i0n-cF-5jV" firstAttribute="top" secondItem="Sfh-Uk-kXF" secondAttribute="top" constant="5" id="DHx-hS-gou"/>
-                                                        <constraint firstItem="oKn-Fx-4FO" firstAttribute="centerY" secondItem="i0n-cF-5jV" secondAttribute="centerY" id="PN5-ih-GQ9"/>
                                                         <constraint firstItem="Gjx-GB-EvR" firstAttribute="centerY" secondItem="Sfh-Uk-kXF" secondAttribute="centerY" id="RXG-7Y-RGY"/>
                                                         <constraint firstItem="Gjx-GB-EvR" firstAttribute="leading" secondItem="oKn-Fx-4FO" secondAttribute="trailing" constant="5" id="bcF-6C-2dq"/>
                                                         <constraint firstItem="oKn-Fx-4FO" firstAttribute="top" secondItem="Sfh-Uk-kXF" secondAttribute="top" constant="5" id="eut-Oq-BZY"/>
-                                                        <constraint firstAttribute="bottom" secondItem="i0n-cF-5jV" secondAttribute="bottom" constant="5" id="fqz-sh-1Lv"/>
                                                         <constraint firstItem="oKn-Fx-4FO" firstAttribute="leading" secondItem="i0n-cF-5jV" secondAttribute="trailing" constant="10" id="hCv-We-ArU"/>
+                                                        <constraint firstAttribute="bottom" secondItem="oKn-Fx-4FO" secondAttribute="bottom" constant="5" id="n8I-eJ-LXb"/>
                                                         <constraint firstItem="Gjx-GB-EvR" firstAttribute="width" secondItem="Gjx-GB-EvR" secondAttribute="height" multiplier="1:1" id="t0D-W4-hmh"/>
                                                     </constraints>
                                                 </view>
