--- a/SRSDriver/Resources/Storyboards/Login.storyboard
+++ b/SRSDriver/Resources/Storyboards/Login.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3A8-0o-UpW">
-                                <rect key="frame" x="30" y="455" width="315" height="48"/>
+                                <rect key="frame" x="30" y="434" width="315" height="48"/>
                                 <color key="backgroundColor" red="0.0" green="0.61568627450000002" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="Htf-2y-WBK"/>
@@ -39,10 +39,10 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_99Cents" translatesAutoresizingMaskIntoConstraints="NO" id="c15-3W-M3X">
-                                <rect key="frame" x="117" y="56" width="141" height="98"/>
+                                <rect key="frame" x="117" y="63" width="141" height="98"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xBQ-JA-gRu">
-                                <rect key="frame" x="63.5" y="194" width="248.5" height="60"/>
+                                <rect key="frame" x="63.5" y="201" width="248.5" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGr-Zv-OIw">
                                         <rect key="frame" x="84.5" y="0.0" width="79.5" height="33.5"/>
@@ -65,10 +65,10 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q6p-bU-AY5">
-                                <rect key="frame" x="30" y="269.5" width="315" height="64"/>
+                                <rect key="frame" x="30" y="276.5" width="315" height="50"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="User name" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="WEi-RD-2KJ">
-                                        <rect key="frame" x="58" y="10" width="257" height="44"/>
+                                        <rect key="frame" x="58" y="10" width="257" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
@@ -77,12 +77,12 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_login_user" translatesAutoresizingMaskIntoConstraints="NO" id="Dl0-i3-ZgB">
-                                        <rect key="frame" x="20" y="23" width="18" height="18"/>
+                                        <rect key="frame" x="20" y="16" width="18" height="18"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="Aej-Kd-UAA"/>
+                                    <constraint firstAttribute="height" constant="50" id="Aej-Kd-UAA"/>
                                     <constraint firstAttribute="trailing" secondItem="WEi-RD-2KJ" secondAttribute="trailing" id="DEE-Zh-vBO"/>
                                     <constraint firstItem="WEi-RD-2KJ" firstAttribute="top" secondItem="Q6p-bU-AY5" secondAttribute="top" constant="10" id="O4W-BL-xSt"/>
                                     <constraint firstAttribute="bottom" secondItem="WEi-RD-2KJ" secondAttribute="bottom" constant="10" id="OxV-N0-CV6"/>
@@ -90,15 +90,20 @@
                                     <constraint firstItem="Dl0-i3-ZgB" firstAttribute="centerY" secondItem="Q6p-bU-AY5" secondAttribute="centerY" id="xBX-cD-gsZ"/>
                                     <constraint firstItem="Dl0-i3-ZgB" firstAttribute="leading" secondItem="Q6p-bU-AY5" secondAttribute="leading" constant="20" id="ycG-gY-QEf"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vdd-rK-Qs9">
-                                <rect key="frame" x="30" y="335.5" width="315" height="64"/>
+                                <rect key="frame" x="30" y="328.5" width="315" height="50"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_login_password" translatesAutoresizingMaskIntoConstraints="NO" id="FaA-Ok-TL7">
-                                        <rect key="frame" x="20" y="23" width="18" height="18"/>
+                                        <rect key="frame" x="20" y="16" width="18" height="18"/>
                                     </imageView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="zQK-52-vh3">
-                                        <rect key="frame" x="58" y="10" width="257" height="44"/>
+                                        <rect key="frame" x="58" y="10" width="257" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -116,9 +121,14 @@
                                     <constraint firstAttribute="bottom" secondItem="zQK-52-vh3" secondAttribute="bottom" constant="10" id="hGo-yR-d6N"/>
                                     <constraint firstAttribute="trailing" secondItem="zQK-52-vh3" secondAttribute="trailing" id="pmy-jM-emH"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember Me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sw9-Wi-EcK">
-                                <rect key="frame" x="220" y="418" width="93" height="17"/>
+                                <rect key="frame" x="220" y="397" width="93" height="17"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -127,14 +137,14 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Utx-s5-Nuw">
-                                <rect key="frame" x="321" y="414.5" width="24" height="24"/>
+                                <rect key="frame" x="321" y="393.5" width="24" height="24"/>
                                 <state key="normal" image="check_selected"/>
                                 <connections>
                                     <action selector="didClickRemember:" destination="3T1-w1-Qsx" eventType="touchUpInside" id="j3D-yF-ybr"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DXr-EW-Tw7">
-                                <rect key="frame" x="109" y="523" width="157" height="30"/>
+                                <rect key="frame" x="109" y="502" width="157" height="30"/>
                                 <state key="normal" title="Forgot your password?">
                                     <color key="titleColor" red="0.98759037260000004" green="0.13012792419999999" blue="0.128249854" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
