--- a/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
@@ -21,10 +21,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ab7-zW-A5e">
-                                <rect key="frame" x="0.0" y="20" width="375" height="30"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="0.0"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No internet connection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUe-cT-W0q">
-                                        <rect key="frame" x="114" y="0.0" width="148" height="30"/>
+                                        <rect key="frame" x="114" y="0.0" width="148" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -36,14 +36,14 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="lUe-cT-W0q" firstAttribute="centerY" secondItem="Ab7-zW-A5e" secondAttribute="centerY" id="1Ns-ZP-71C"/>
-                                    <constraint firstAttribute="height" constant="30" id="amu-ZZ-kBU"/>
+                                    <constraint firstAttribute="height" id="amu-ZZ-kBU"/>
                                     <constraint firstItem="lUe-cT-W0q" firstAttribute="centerX" secondItem="Ab7-zW-A5e" secondAttribute="centerX" id="g8x-Og-y4M"/>
                                     <constraint firstAttribute="bottom" secondItem="lUe-cT-W0q" secondAttribute="bottom" id="hJG-gM-ixU"/>
                                     <constraint firstItem="lUe-cT-W0q" firstAttribute="top" secondItem="Ab7-zW-A5e" secondAttribute="top" id="sBx-Hh-OZd"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="258" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bdk-MM-huX">
-                                <rect key="frame" x="0.0" y="50" width="375" height="617"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexBackgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
