--- a/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
@@ -21,10 +21,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ofZ-Ov-zl1">
-                                <rect key="frame" x="0.0" y="20" width="375" height="30"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="0.0"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No internet connection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mz9-ds-W3S">
-                                        <rect key="frame" x="114" y="0.0" width="148" height="30"/>
+                                        <rect key="frame" x="114" y="0.0" width="148" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -38,12 +38,12 @@
                                     <constraint firstItem="mz9-ds-W3S" firstAttribute="top" secondItem="ofZ-Ov-zl1" secondAttribute="top" id="GzI-2y-OIe"/>
                                     <constraint firstAttribute="bottom" secondItem="mz9-ds-W3S" secondAttribute="bottom" id="TFa-FQ-OC1"/>
                                     <constraint firstItem="mz9-ds-W3S" firstAttribute="centerY" secondItem="ofZ-Ov-zl1" secondAttribute="centerY" id="UGP-23-5k5"/>
-                                    <constraint firstAttribute="height" constant="30" id="rza-mT-3cR"/>
+                                    <constraint firstAttribute="height" id="rza-mT-3cR"/>
                                     <constraint firstItem="mz9-ds-W3S" firstAttribute="centerX" secondItem="ofZ-Ov-zl1" secondAttribute="centerX" id="wUh-2A-hqf"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KQA-xX-EPy">
-                                <rect key="frame" x="0.0" y="50" width="375" height="617"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RouteListHeaderCell" rowHeight="62" id="juS-W3-doM" customClass="RouteListCell" customModule="DMSDriver" customModuleProvider="target">
@@ -419,7 +419,7 @@
                                 </constraints>
                             </view>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Have no routes" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpg-qv-SkC">
-                                <rect key="frame" x="136.5" y="349.5" width="102" height="18"/>
+                                <rect key="frame" x="136.5" y="334.5" width="102" height="18"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                 <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
